@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - improved speed of Alter table settings in partitioned tables
+
 2014/12/22 0.46.1
 =================
 
